@@ -1,19 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<projectDescription>
-	<name>explora</name>
-	<comment></comment>
-	<projects>
-	</projects>
-	<buildSpec>
-		<buildCommand>
-			<name>de.walware.statet.r.builders.RSupport</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-	</buildSpec>
-	<natures>
-		<nature>de.walware.statet.base.StatetNature</nature>
-		<nature>de.walware.statet.r.RNature</nature>
-		<nature>de.walware.statet.r.RPkgNature</nature>
-	</natures>
-</projectDescription>
