@@ -1,2 +1,0 @@
-RProjectBuild/Package.name=Explora
-eclipse.preferences.version=1
