@@ -1,5 +1,5 @@
 Package: explora
-Version: 0.0-1
+Version: 0.0-3
 Date: 2014-07-11
 Title: Bioversity Seed4Needs Explora Germplasm Selection Tool
 Authors@R: c( person(given="Maarten", family = "van Zonneveld", role = c("aut",
@@ -48,4 +48,4 @@ Collate:
     'util.r'
     'algorithms.r'
     'loader.r'
-    'explora.r'
+    'gui.r'
