@@ -1,6 +1,6 @@
 # Generated by roxygen2 (4.0.1): do not edit by hand
 
-export(explora)
+export(workbench)
 import(ade4)
 import(cluster)
 import(gWidgetsRGtk2)
