@@ -1,9 +1,9 @@
 % Generated by roxygen2 (4.0.1): do not edit by hand
-\name{explora}
-\alias{explora}
-\title{explora}
+\name{workbench}
+\alias{workbench}
+\title{Explora germplasm selection tool}
 \usage{
-explora()
+workbench()
 }
 \description{
 Bioversity/CCAFS Seeds4Needs Explora germplasm selection tool
@@ -16,7 +16,7 @@ from genebank collections that meet the interests of the user. Explora allows
 3) maximization of diversity for specific traits of interests.
 }
 \examples{
-explora()
+workbench()
 }
 \author{
 Maarten van Zonneveld,  Johannes Ospina and Richard Bruskiewich
