@@ -1,6 +1,0 @@
-#----------------------------------------------------------------------------------------------------------#
-# Explora Test Suite                                                                                         #
-# AUTHOR: Richard Bruskiewich                                                                              #
-# VERSION 1.0 - 2014-07-18                                                                                 #
-#----------------------------------------------------------------------------------------------------------#
-
